<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/main_from_songs"
            android:text="@string/mainButton"
            style="@style/ButtonStyle"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/artists_from_song"
            android:text="@string/artistsButton"
            style="@style/ButtonStyle"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/playlist_from_song"
            android:text="@string/playlistsButton"
            style="@style/ButtonStyle"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/search_from_song"
            android:text="@string/searchButton"
            style="@style/ButtonStyle"/>
    </LinearLayout>
<ListView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/songs"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

</ListView>
</LinearLayout>