<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".MainActivity"
android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/main_from_search"
            android:text="@string/mainButton"
            style="@style/ButtonStyle"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/song_from_search"
            android:text="@string/song_button"
            style="@style/ButtonStyle"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/playlist_from_swarch"
            android:text="@string/playlistsButton"
            style="@style/ButtonStyle"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/artists_from_search"
            android:text="@string/artistsButton"
            style="@style/ButtonStyle"/>
    </LinearLayout>


    <TextView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/artist8TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="31dp"
        android:textAlignment="center"
        android:background="#234512"
        android:text="Here will be search dialog or search widget"
        android:textAllCaps="true"
        android:textColor="#FFFFFF">

    </TextView>

</LinearLayout>