<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlaylistActivity">
   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/main_from_playlist"
            android:text="@string/mainButton"
            style="@style/ButtonStyle"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/song_from_playlist"
            android:text="@string/song_button"
            style="@style/ButtonStyle"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/artists_from_playlists"
            android:text="@string/artistsButton"
            style="@style/ButtonStyle"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/search_from_playlists"
            android:text="@string/searchButton"
            style="@style/ButtonStyle"/>
    </LinearLayout>

    <TextView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/artist8TextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="true"
        android:layout_margin="55dp"
        android:text="In this activity user can add new playlists."
        >

    </TextView>
   </LinearLayout>
</android.support.constraint.ConstraintLayout>